final top bar alignment fixes to prevent jitter on big screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -559,7 +559,7 @@ body {
     top: 1rem;
     left: 50%;
     transform: translateX(-50%);
-    height: 8rem;
+    height: fit-content;
     width: 96vw;
     padding: 1rem 2rem;
     border-radius: 1rem;
@@ -663,6 +663,7 @@ body {
   }
 
   #avatar {
+    height: 6.5rem;
     gap: 0.5rem;
     margin: 0;
   }
